--- a/ToDo
+++ b/ToDo
@@ -1,4 +1,7 @@
-unfold
+type (TypeExpr)
+file loading
+list monad
+fix
 VEFold.Unroll
-primitive functions (include fold and unfold?)
 efficient IType.Rename (singly-linked list)
+primitive functions
